--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,7 @@
 * More memes ( ͡° ͜ʖ ͡°)
 
 * Here's my setup which I recommend you copy 
+[url=https://www.youtube.com/strmods][u]click here[/u]|[/url]
 https://raw.githubusercontent.com/gimmedemmaps/keks/master/settings.png
 
 /*
