--- a/changelog.txt
+++ b/changelog.txt
@@ -7,7 +7,7 @@
 * Decrypted giveaways now available (star icon at the top) (decrypted giveaways are from users of the original script who make secret giveaways normal users can't see)
 * More memes ( ͡° ͜ʖ ͡°)
 
-* Here's my setup which I recommend you copy 
+* Here's my setup which I recommend you copy. 
 https://www.dropbox.com/s/7fewc84bbuzdbhf/settings.png?dl=0
 
 
